--- a/client/src/pages/communities/communities.scss
+++ b/client/src/pages/communities/communities.scss
@@ -1,13 +1,17 @@
 .communities {
     display: flex;
-    color: red;
-
+    color: #333; // Changer la couleur du texte pour plus de lisibilité
+  
     .sidebar {
-        flex:2;
-        background-color: red;
+      flex: 2;
+      background-color: #f8f9fa; // Couleur de fond plus douce
+      border-right: 1px solid #ddd; // Ajout d'une bordure pour séparer la sidebar du contenu
+      padding: 20px;
     }
-
+  
     .content {
-        flex:7
+      flex: 7;
+      padding: 20px; // Ajout de padding pour l'espacement interne
     }
-}
+  }
+  
