--- a/client/src/pages/login/login.scss
+++ b/client/src/pages/login/login.scss
@@ -7,7 +7,7 @@
     justify-content: center;
     align-items: center;
     height: 80vh;
-    background-color: #12002b;
+    // background-color: #12002b;
   
     .sign-in-content {
       box-sizing: border-box;
