--- a/client/src/pages/communities/communities.scss
+++ b/client/src/pages/communities/communities.scss
@@ -1,6 +1,8 @@
 .communities {
     display: flex;
-    color: #333; // Changer la couleur du texte pour plus de lisibilité
+    color: #333;
+    width: 60%;
+    margin:  20px auto;
   
     .sidebar {
       flex: 2;
