--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,8 +1,9 @@
 
 body {
-  background-color: #f4f4f5;
+  background-color: #34343b;
 color: black;
   /* background-color: #2d3748;  */
+  font-family: "Greycliff CF", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
 
  
 
