--- a/client/src/components/navbar/navbar.scss
+++ b/client/src/components/navbar/navbar.scss
@@ -4,14 +4,13 @@
   justify-content: space-between;
   align-items: center;
   padding: 15px 30px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  // box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   flex-wrap: wrap;
   color: black;
-  background-color: white;
+  // background-color: white;
 
-  // Add the following properties:
-  width: 100%;  // Ensure the navbar takes the full width
-  box-sizing: border-box;  // Include padding and border in the element's total width and height
+  width: 100%;  
+  box-sizing: border-box;  
 
   @media (max-width: 768px) {
     padding: 10px 20px;
@@ -37,6 +36,7 @@
       font-size: 1.5rem;
       font-weight: 700;
       color: rgb(26, 24, 24);
+     
     }
   }
 
@@ -55,9 +55,14 @@
     .search-bar {
       display: flex;
       align-items: center;
-      width: 600px;
+      width: 400px;
       position: relative;
       margin-right: 80px;
+      transition: width 0.3s ease-in-out;
+
+      &.focused {
+        width: 600px;
+      }
 
       @media (max-width: 768px) {
         margin-right: 0;
@@ -65,14 +70,16 @@
       }
 
       input {
-        padding: 12px 30px;
+        // padding: 12px 30px;
+        padding-left: 40px;
         border: none;
         border-radius: 5px 0 0 5px;
         font-size: 18px;
         outline: none;
         width: 100%;
         border-radius: 10px;
-        background-color: #333;
+        background-color: #b9b7b7;
+      
       }
 
       .search-button {
@@ -83,6 +90,8 @@
         cursor: pointer;
         position: absolute;
         margin-right: 30px;
+        font-size: x-large;
+        margin-bottom: 10px;
       }
     }
 
@@ -90,10 +99,10 @@
     .main-nav-item {
       text-decoration: none;
       margin-left: 20px;
-      color: black; /* Set the text color to black */
-      padding: 10px 15px; /* Add padding to make the border visible */
-      border: 1px solid black; /* Add a black border */
-      border-radius: 5px; /* Optional: Add some border-radius for rounded corners */
+      color: black; 
+      padding: 10px 15px; 
+      // border: 1px solid black; 
+      border-radius: 5px; 
       display: flex;
       align-items: center;
       font-size: 16px;
@@ -101,8 +110,8 @@
       transition: color 0.2s ease-in-out, background-color 0.2s ease-in-out;
 
       &:hover {
-        color: black; /* Text color on hover */
-        background-color: white; /* Background color on hover */
+        color: black; 
+        background-color: white; 
         text-decoration: none;
       }
 
