--- a/client/src/pages/journeys/journeys.scss
+++ b/client/src/pages/journeys/journeys.scss
@@ -1,83 +1,128 @@
-.journies-container {
+.journeys-container {
   display: flex;
-  justify-content: space-between;
+  // background-color: #f5f5f5;
   padding: 20px;
+  gap: 20px; 
+  box-sizing: border-box;
 
-}
+  .journeys-content {
+    flex: 2;
+    display: flex;
+    // flex-direction: column;
+    margin-left: 20%;
+    gap: 20px;
+    width:  100px;
 
-.journeys-list {
-  width: 60%;
-  margin-right: 20px; /* Espacement entre la liste et le formulaire */
-}
+    .journeys-list {
+      flex: 10;
+      background-color: #fff;
+      border-radius: 10px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+      padding: 20px;
+      width: 0px;
 
-.journey-form {
-  width: 35%;
-}
+      h1 {
+        font-size: 2rem;
+        font-weight: bold;
+        color: #333;
+        margin-bottom: 20px;
+      }
 
-h1, h2 {
-  color: #333; /* Couleur de texte */
-}
+      ul {
+        list-style-type: none;
+        padding: 0;
+      }
 
-ul {
-  list-style-type: none;
-  padding: 0;
-}
+      .journey-card {
+        background-color: #fff;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        border-radius: 8px;
+        padding: 15px;
+        margin-bottom: 20px;
 
-.journey-card {
-  background-color: #fff;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  border-radius: 8px;
-  padding: 10px;
-  margin-bottom: 20px;
-}
+        h2 {
+          margin: 0;
+          font-size: 1.5rem;
+          color: #333;
+        }
 
-.journey-card h2 {
-  margin: 0;
-  font-size: 20px;
-}
+        p {
+          margin: 10px 0;
+          color: #555;
+        }
 
-.journey-card p {
-  margin: 10px 0;
-}
+        .progress-bar {
+          width: 100%;
+          height: 10px;
+          background-color: #e0e0e0;
+          border-radius: 5px;
+          margin: 10px 0;
+        }
 
-.progress-bar {
-  width: 100%;
-  height: 10px;
-  background-color: #e0e0e0;
-  border-radius: 5px;
-  margin: 10px 0;
-}
+        .progress {
+          height: 100%;
+          background-color: #007bff;
+          border-radius: 5px;
+        }
 
-.progress {
-  height: 100%;
-  background-color: #007bff;
-  border-radius: 5px;
-}
+        .progress-percent {
+          font-size: 14px;
+          color: #333;
+        }
 
-.progress-percent {
-  font-size: 14px;
-}
+        a {
+          text-decoration: none;
+          color: #007bff;
+          font-weight: bold;
 
-form {
-  display: flex;
-  flex-direction: column;
-}
+          &:hover {
+            text-decoration: underline;
+          }
+        }
+      }
+    }
 
-input {
-  margin-bottom: 10px;
-  padding: 8px;
-  font-size: 16px;
-}
+    .journey-form {
+      flex: 3;
+      background-color: #fff;
+      border-radius: 10px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+      padding: 20px;
+      height: 250px;
 
-button {
-  padding: 10px;
-  background-color: #00bc77;
-  color: white;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-}
+      h2 {
+        font-size: 1.5rem;
+        font-weight: bold;
+        color: #333;
+        margin-bottom: 20px;
+      }
 
-button:hover {
-  background-color: #12002b;
+      form {
+        display: flex;
+        flex-direction: column;
+      }
+
+      input {
+        margin-bottom: 10px;
+        padding: 10px;
+        font-size: 1rem;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+      }
+
+      button {
+        padding: 10px;
+        background-color: #00bc77;
+        color: white;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        transition: background-color 0.3s ease;
+
+        &:hover {
+          background-color: #009966;
+        }
+      }
+    }
+  }
 }
