--- a/client/src/pages/login/login.scss
+++ b/client/src/pages/login/login.scss
@@ -8,6 +8,21 @@
     align-items: center;
     height: 80vh;
     // background-color: #12002b;
+
+    .welcome {
+  
+      
+      p {
+        font-size: 1.5rem; /* Taille du texte assez grande pour être lisible */
+        font-weight: 600; /* Texte en gras pour importance */
+        color: #333333; /* Couleur du texte */
+        margin: 0; /* Supprimer la marge par défaut du paragraphe */
+        line-height: 1.5; /* Espace entre les lignes */
+        margin-top: 30%;
+        font-family: "Greycliff CF", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
+        font-weight: 700;
+      }
+    }
   
     .sign-in-content {
       box-sizing: border-box;
