--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,9 +1,13 @@
 
 body {
-  background-color: #34343b;
+  /* background-color: #f5f5f5; */
+
 color: black;
   /* background-color: #2d3748;  */
-  font-family: "Greycliff CF", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
+  /* 
+   */
+
+   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 
  
 
