edit side bar position style

--- a/client/src/components/sidebar/sidebar.scss
+++ b/client/src/components/sidebar/sidebar.scss
@@ -3,7 +3,7 @@
 .sidebar {
   margin-top: 75px;
   width: 250px;
-  background-color: #fafafa;
+  background-color: #c5bfbf;
   border-right: 1px solid #ddd;
   padding: 20px;
   position: fixed;
@@ -11,6 +11,7 @@
   left: 0;
   height: 100%;
   overflow-y: auto;
+  border-radius: 10px;
   
 }
 
