--- a/client/src/components/sidebar/sidebar.scss
+++ b/client/src/components/sidebar/sidebar.scss
@@ -3,7 +3,7 @@
 .sidebar {
   margin-top: 75px;
   width: 250px;
-  background-color: #c5bfbf;
+         
   border-right: 1px solid #ddd;
   padding: 20px;
   position: fixed;
@@ -28,7 +28,7 @@
   color: #333;
   font-size: 16px;
   transition: color 0.3s;
-  margin-left: 10px; /* Ajouter un espace après l'icône */
+  margin-left: 10px; 
 }
 
 .icon {
