edit style post details

--- a/client/src/components/navbar/navbar.scss
+++ b/client/src/components/navbar/navbar.scss
@@ -100,7 +100,8 @@
     .main-nav-item {
       text-decoration: none;
       margin-left: 20px;
-      color: black; 
+     
+     color: #1b033d;
       padding: 10px 15px; 
       // border: 1px solid black; 
       border-radius: 5px; 
